<resources>
    <string name="app_name">ULangProjeto</string>
    <string name="gerir_pacotes">Gerir Pacotes</string>
    <string name="select_the_package_to_edit">Escolha o pacote a editar</string>
    <string name="voltar">Voltar</string>
    <string name="editar">Editar</string>
    <string name="remover_pacotes">Remover Pacotes</string>
    <string name="escolha_o_pacote_a_remover">Escolha o pacote a remover</string>
    <string name="remover">Remover</string>
    <string name="procurar">Procurar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nome_do_pacote">Termo a pesquisar</string>
    <string name="descarregar">Descarregar</string>
    <string name="classificar_pacotes">Classificar Pacotes</string>
    <string name="escolha_o_pacote_a_classificar">Escolha o pacote a classificar</string>
    <string name="classificar">Classificar</string>
    <string name="descarregar_pacotes">Descarregar Pacotes</string>
    <string name="escolha_o_pacote_a_estudar">Escolha o pacote a estudar</string>
    <string name="estudar">estudar</string>
</resources>