<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c3e0e5"
    tools:context=".estudante_descarregar">

    <TextView
        android:id="@+id/categorias"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="monospace"
        android:text="Descarregar Pacotes"
        android:textAlignment="center"
        android:textColor="#274472"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="333dp"
        android:layout_above="@+id/buttons"
        android:layout_below="@id/categorias"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/container_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/searchbuttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/searchText"
                android:layout_width="279dp"
                android:layout_height="66dp"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/nome_do_pacote"
                android:textSize="16sp" />

            <ImageView
                android:src="@drawable/ic_search"
                android:layout_width="75dp"
                android:layout_height="59dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="Search"
                android:text="@string/procurar"
                app:cornerRadius="7dp" />
        </LinearLayout>

        <Button
            android:id="@+id/addCategoria3"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="#41729f"
            android:onClick="Return"
            android:text="@string/voltar"
            android:textColor="#c3e0e5"
            app:cornerRadius="7dp"
            app:rippleColor="#33AAAAAA" />


    </LinearLayout>

</RelativeLayout>
